src/python/OMDParser.py
# Generated from OMD.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OMDParser ( Parser ):

    grammarFileName = "OMD.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'component'", "'molecule'", 
                     "'zconstraint'", "'restraint'", "'atom'", "'bond'", 
                     "'bend'", "'torsion'", "'inversion'", "'rigidBody'", 
                     "'cutoffGroup'", "'constraint'", "'distance'", "'fragment'", 
                     "'sequence'", "'members'", "'center'", "'satellites'", 
                     "'position'", "'orientation'", "'flucQ'", "'RNEMD'", 
                     "'light'", "'velocityField'", "'minimizer'", "'Fixed'", 
                     "'Harmonic'", "'Cubic'", "'Quartic'", "'Polynomial'", 
                     "'Morse'", "'GhostBend'", "'UreyBradley'", "'Cosine'", 
                     "'GhostTorsion'", "'Charmm'", "'Opls'", "'Trappe'", 
                     "'AmberImproper'", "'ImproperCosine'", "'CentralAtomHeight'", 
                     "'Dreiding'", "'charge'", "'nodes'", "'='", "':'", 
                     "','", "'?'", "';'", "'.'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "COMPONENT", "MOLECULE", 
                      "ZCONSTRAINT", "RESTRAINT", "ATOM", "BOND", "BEND", 
                      "TORSION", "INVERSION", "RIGIDBODY", "CUTOFFGROUP", 
                      "CONSTRAINT", "DISTANCE", "FRAGMENT", "SEQUENCE", 
                      "MEMBERS", "CENTER", "SATELLITES", "POSITION", "ORIENTATION", 
                      "FLUCQ", "RNEMD", "LIGHT", "VELOCITYFIELD", "MINIMIZER", 
                      "FIXED", "HARMONIC", "CUBIC", "QUARTIC", "POLYNOMIAL", 
                      "MORSE", "GHOSTBEND", "UREYBRADLEY", "COSINE", "GHOSTTORSION", 
                      "CHARMM", "OPLS", "TRAPPE", "AMBERIMPROPER", "IMPROPERCOSINE", 
                      "CENTRALATOMHEIGHT", "DREIDING", "CHARGE", "NODES", 
                      "ASSIGNEQUAL", "COLON", "COMMA", "QUESTIONMARK", "SEMICOLON", 
                      "DOT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "LCURLY", "RCURLY", "NUM_LONG", "NUM_INT", "NUM_FLOAT", 
                      "NUM_DOUBLE", "CharLiteral", "StringLiteral", "ID", 
                      "Whitespace", "Newline", "LineContinuation", "Comment", 
                      "CPPComment", "PREPROC_DIRECTIVE" ]

    RULE_omdfile = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_constant = 3
    RULE_componentblock = 4
    RULE_zconstraintblock = 5
    RULE_restraintblock = 6
    RULE_flucqblock = 7
    RULE_rnemdblock = 8
    RULE_lightblock = 9
    RULE_velocityfieldblock = 10
    RULE_minimizerblock = 11
    RULE_moleculeblock = 12
    RULE_moleculestatement = 13
    RULE_atomblock = 14
    RULE_atomstatement = 15
    RULE_bondblock = 16
    RULE_bondstatement = 17
    RULE_bendblock = 18
    RULE_bendstatement = 19
    RULE_torsionblock = 20
    RULE_torsionstatement = 21
    RULE_inversionblock = 22
    RULE_inversionstatement = 23
    RULE_rigidbodyblock = 24
    RULE_rigidbodystatement = 25
    RULE_cutoffgroupblock = 26
    RULE_cutoffgroupstatement = 27
    RULE_nodesblock = 28
    RULE_nodesstatement = 29
    RULE_fragmentblock = 30
    RULE_fragmentstatement = 31
    RULE_constraintblock = 32
    RULE_constraintstatement = 33
    RULE_sequencestring = 34
    RULE_doubleNumberTuple = 35
    RULE_inttuple = 36
    RULE_intConst = 37
    RULE_doubleNumber = 38
    RULE_floatConst = 39
    RULE_vectorConst = 40

    ruleNames =  [ "omdfile", "statement", "assignment", "constant", "componentblock", 
                   "zconstraintblock", "restraintblock", "flucqblock", "rnemdblock", 
                   "lightblock", "velocityfieldblock", "minimizerblock", 
                   "moleculeblock", "moleculestatement", "atomblock", "atomstatement", 
                   "bondblock", "bondstatement", "bendblock", "bendstatement", 
                   "torsionblock", "torsionstatement", "inversionblock", 
                   "inversionstatement", "rigidbodyblock", "rigidbodystatement", 
                   "cutoffgroupblock", "cutoffgroupstatement", "nodesblock", 
                   "nodesstatement", "fragmentblock", "fragmentstatement", 
                   "constraintblock", "constraintstatement", "sequencestring", 
                   "doubleNumberTuple", "inttuple", "intConst", "doubleNumber", 
                   "floatConst", "vectorConst" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    COMPONENT=3
    MOLECULE=4
    ZCONSTRAINT=5
    RESTRAINT=6
    ATOM=7
    BOND=8
    BEND=9
    TORSION=10
    INVERSION=11
    RIGIDBODY=12
    CUTOFFGROUP=13
    CONSTRAINT=14
    DISTANCE=15
    FRAGMENT=16
    SEQUENCE=17
    MEMBERS=18
    CENTER=19
    SATELLITES=20
    POSITION=21
    ORIENTATION=22
    FLUCQ=23
    RNEMD=24
    LIGHT=25
    VELOCITYFIELD=26
    MINIMIZER=27
    FIXED=28
    HARMONIC=29
    CUBIC=30
    QUARTIC=31
    POLYNOMIAL=32
    MORSE=33
    GHOSTBEND=34
    UREYBRADLEY=35
    COSINE=36
    GHOSTTORSION=37
    CHARMM=38
    OPLS=39
    TRAPPE=40
    AMBERIMPROPER=41
    IMPROPERCOSINE=42
    CENTRALATOMHEIGHT=43
    DREIDING=44
    CHARGE=45
    NODES=46
    ASSIGNEQUAL=47
    COLON=48
    COMMA=49
    QUESTIONMARK=50
    SEMICOLON=51
    DOT=52
    LPAREN=53
    RPAREN=54
    LBRACKET=55
    RBRACKET=56
    LCURLY=57
    RCURLY=58
    NUM_LONG=59
    NUM_INT=60
    NUM_FLOAT=61
    NUM_DOUBLE=62
    CharLiteral=63
    StringLiteral=64
    ID=65
    Whitespace=66
    Newline=67
    LineContinuation=68
    Comment=69
    CPPComment=70
    PREPROC_DIRECTIVE=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class OmdfileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OMDParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.StatementContext)
            else:
                return self.getTypedRuleContext(OMDParser.StatementContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_omdfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOmdfile" ):
                listener.enterOmdfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOmdfile" ):
                listener.exitOmdfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOmdfile" ):
                return visitor.visitOmdfile(self)
            else:
                return visitor.visitChildren(self)




    def omdfile(self):

        localctx = OMDParser.OmdfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_omdfile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 3)) & ~0x3f) == 0 and ((1 << (_la - 3)) & 4611686018459901967) != 0):
                self.state = 82
                self.statement()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(OMDParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(OMDParser.AssignmentContext,0)


        def componentblock(self):
            return self.getTypedRuleContext(OMDParser.ComponentblockContext,0)


        def moleculeblock(self):
            return self.getTypedRuleContext(OMDParser.MoleculeblockContext,0)


        def fragmentblock(self):
            return self.getTypedRuleContext(OMDParser.FragmentblockContext,0)


        def zconstraintblock(self):
            return self.getTypedRuleContext(OMDParser.ZconstraintblockContext,0)


        def restraintblock(self):
            return self.getTypedRuleContext(OMDParser.RestraintblockContext,0)


        def flucqblock(self):
            return self.getTypedRuleContext(OMDParser.FlucqblockContext,0)


        def rnemdblock(self):
            return self.getTypedRuleContext(OMDParser.RnemdblockContext,0)


        def lightblock(self):
            return self.getTypedRuleContext(OMDParser.LightblockContext,0)


        def velocityfieldblock(self):
            return self.getTypedRuleContext(OMDParser.VelocityfieldblockContext,0)


        def minimizerblock(self):
            return self.getTypedRuleContext(OMDParser.MinimizerblockContext,0)


        def getRuleIndex(self):
            return OMDParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = OMDParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [65]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.assignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.componentblock()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.moleculeblock()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.fragmentblock()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.zconstraintblock()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.restraintblock()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.flucqblock()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.rnemdblock()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 9)
                self.state = 98
                self.lightblock()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.velocityfieldblock()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.minimizerblock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OMDParser.ID, 0)

        def ASSIGNEQUAL(self):
            return self.getToken(OMDParser.ASSIGNEQUAL, 0)

        def constant(self):
            return self.getTypedRuleContext(OMDParser.ConstantContext,0)


        def SEMICOLON(self):
            return self.getToken(OMDParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OMDParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = OMDParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(OMDParser.ID)
            self.state = 104
            self.match(OMDParser.ASSIGNEQUAL)
            self.state = 105
            self.constant()
            self.state = 106
            self.match(OMDParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intConst(self):
            return self.getTypedRuleContext(OMDParser.IntConstContext,0)


        def floatConst(self):
            return self.getTypedRuleContext(OMDParser.FloatConstContext,0)


        def vectorConst(self):
            return self.getTypedRuleContext(OMDParser.VectorConstContext,0)


        def TRUE(self):
            return self.getToken(OMDParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(OMDParser.FALSE, 0)

        def ID(self):
            return self.getToken(OMDParser.ID, 0)

        def StringLiteral(self):
            return self.getToken(OMDParser.StringLiteral, 0)

        def getRuleIndex(self):
            return OMDParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = OMDParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constant)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [59, 60]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.intConst()
                pass
            elif token in [61, 62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.floatConst()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.vectorConst()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(OMDParser.TRUE)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.match(OMDParser.FALSE)
                pass
            elif token in [65]:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.match(OMDParser.ID)
                pass
            elif token in [64]:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.match(OMDParser.StringLiteral)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENT(self):
            return self.getToken(OMDParser.COMPONENT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_componentblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentblock" ):
                listener.enterComponentblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentblock" ):
                listener.exitComponentblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponentblock" ):
                return visitor.visitComponentblock(self)
            else:
                return visitor.visitChildren(self)




    def componentblock(self):

        localctx = OMDParser.ComponentblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_componentblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(OMDParser.COMPONENT)
            self.state = 118
            self.match(OMDParser.LCURLY)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==65:
                self.state = 119
                self.assignment()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(OMDParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ZconstraintblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZCONSTRAINT(self):
            return self.getToken(OMDParser.ZCONSTRAINT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_zconstraintblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZconstraintblock" ):
                listener.enterZconstraintblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZconstraintblock" ):
                listener.exitZconstraintblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitZconstraintblock" ):
                return visitor.visitZconstraintblock(self)
            else:
                return visitor.visitChildren(self)




    def zconstraintblock(self):

        localctx = OMDParser.ZconstraintblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_zconstraintblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(OMDParser.ZCONSTRAINT)
            self.state = 128
            self.match(OMDParser.LCURLY)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==65:
                self.state = 129
                self.assignment()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(OMDParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestraintblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESTRAINT(self):
            return self.getToken(OMDParser.RESTRAINT, 0)

        def LCURLY(self):
            return self.getToken(OMDParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(OMDParser.RCURLY, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OMDParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(OMDParser.AssignmentContext,i)


        def getRuleIndex(self):
            return OMDParser.RULE_restraintblock
